2004-08-05  Andrew Lunn  <andrew.lunn@ascom.ch>

	* src/flash.c:
	* src/fconfig.c: Make use of the new flash API.

2004-06-25  Andrew Lunn  <andrew.lunn@ascom.ch>

	* src/flash.c (find_free): fix endless loop when removing a
	collapsed chunk from chunk table. Found by Laurent Gonzalez
	(fis_load): Fixed a compiler warning.

2004-05-31  Jani Monoses <jani@iv.ro>

	* src/main.c:
	* include/redboot.h: Get rid of unused workspace_size.
	
2004-05-16  Andrew Dyer  <adyer@righthandtech.com>
2004-05-27  Jonathan Larmour  <jifl@eCosCentric.com>

	* src/fs/ide.c: make sure IDE_STAT_BSY is 0 before checking other
	bits in the status register

2004-05-21  Ian Campbell  <icampbell@arcom.com>
	 
	* src/main.c: Make it build without CYGSEM_REDBOOT_FLASH_ALIASES.
	
2004-05-05  Gary Thomas  <gary@mlbassoc.com>

	* src/flash.c (fis_load): CRC check on load was broken (the CDL
	option changed names)

2004-04-29  Jonathan Larmour  <jifl@eCosCentric.com>

	* doc/redboot_epilogue.sgml: Comment out </part> to reflect change
	of 2004-04-19.

2004-04-23  Gary Thomas  <gary@mlbassoc.com>

	* src/main.c: 
	* src/fs/fileio.c: 
	* src/net/net_io.c: 
	* src/load.c: 
	* src/flash.c: 
	* include/redboot.h: Add asserts to check that option arrays
	are not overrun (when used with variable number of options).

2004-04-23  Gary Parnes  <garyp@logicpd.com>

	* src/net/tftp_client.c: The port, if specified by the user,
	is now corrected for endianness issues.

2004-04-19  Gary Thomas  <gary@mlbassoc.com>

	* src/fs/fileio.c: Can't test for CYGPKG_IO_FLASH_BLOCK_DEVICE without
	first testing for CYGPKG_IO_FLASH and including it's pkgconf file.

2004-04-19  John Dallaway  <jld@ecoscentric.com>

	* doc/makefile, doc/redboot_main.sgml: New files to build the RedBoot
	User's Guide as a self-contained document.

	* doc/redboot.sgml: Eliminate <part> tag to build the RedBoot User's
	Guide as a self-contained document.

2004-03-30  Mark Salter  <msalter@redhat.com>
